Issue 95 Bug: Shift-click presents unwanted browser window. Fixed.

--- a/dev/css/ga4gh-dev.css
+++ b/dev/css/ga4gh-dev.css
@@ -11,6 +11,18 @@
     overflow-y: scroll;
 }
 
+.list-group-item {
+
+    cursor: pointer;
+    background-color: #ffffff;
+}
+
+.list-group-item:hover,
+.list-group-item:focus,
+.list-group-item:active  {
+    background-color: #f5f5f5;
+}
+
 .container-fluid footer {
     margin-top: 32px;
     color: white;
